--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "GPT-3 Writer",
-  "description": "Write a blog post in the style of your favorite thinker anywhere!",
+  "name": "Paraphrase AI",
+  "description": "Find a wow text and tweak it",
   "version": "1.0",
   "manifest_version": 3,
   "icons": {
@@ -11,6 +11,16 @@
   },
   "action": {
     "default_popup": "index.html",
-    "default_title": "Generate blog post"
-  }
+    "default_title": "Generate paraphrased text"
+  },
+  "permissions": ["scripting", "activeTab", "contextMenus", "tabs"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["content-script.js"]
+    }
+  ]
 }
